fix sandwich pic, navbar alignment

--- a/less/components/navbar.less
+++ b/less/components/navbar.less
@@ -67,10 +67,6 @@ body {
   margin-top: 3px;
 }
 
-.navbar .login-form .form-group {
-  vertical-align: baseline;
-}
-
 .navbar .login-form .forgot-password {
   position: absolute;
   right: 0;
